@@ -1,5 +1,6 @@
 package com.service;
-import static com.service.Utils.Mensaje;
+import static com.service.utilsPackage.Utils.Mensaje;
+
 import android.content.Context;
 import android.content.SharedPreferences;
 import androidx.appcompat.app.AppCompatActivity;
@@ -22,7 +23,7 @@ import com.service.Devices.Dispositivos.Clases.MasterDispositivos;
 import com.service.Devices.Dispositivos.Clases.SlaveDispositivos;
 import com.service.Devices.Impresora.ImprimirEstandar;
 import com.service.Interfaz.Dispositivo;
-import com.service.Interfaz.EnumManager;
+import com.service.utilsPackage.EnumReflexion;
 import com.service.Interfaz.OnFragmentChangeListener;
 import com.service.Devices.Escanneres.Clases.EscannerManager;
 import com.service.Devices.Expansiones.Clases.ExpansionManager;
@@ -34,11 +35,13 @@ import com.service.Devices.Expansiones.Clases.MixtoC;
 import com.service.Devices.Expansiones.Clases.SalidasC;
 import com.service.Interfaz.Balanza;
 import com.service.Interfaz.Printer;
-import com.service.Interfaz.Reflextion_Interface;
+import com.service.utilsPackage.Reflextion_Interface;
 import com.service.Interfaz.dispositivoBase;
 import com.service.estructuras.classDevice;
+import com.service.utilsPackage.ComService;
+import com.service.utilsPackage.PreferencesDevicesManager;
+
 import java.io.Serializable;
-import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -47,13 +50,13 @@ import java.util.Objects;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
-public  class BalanzaService implements Serializable {
+public  class PHService implements Serializable {
 
    // public  Balanza Services;
     public com.service.Interfaz.ExpansionGestor Expansiones = new Expansiones();
-    public Dispositivo.DeviceFachade Dispositivos;
+    public Dispositivo.DeviceFachade Dispositivos=null;
 
-    private InternalDispositivos DispositivosInstancia;
+    private InternalDispositivos DispositivosInstancia=null;
     public com.service.Interfaz.EscanerGestor Escaneres = new Escaneres();
     public Printer Impresoras  = new Impresoras();
     //leandrito
@@ -75,10 +78,10 @@ public  class BalanzaService implements Serializable {
         public ArrayList<String> getConfiguraciones() {
             try {
                 ArrayList<String> list= new ArrayList<>();
-                list.add(Reflextion_Interface.getFieldValueStr(clase , String.valueOf(EnumManager.Configuracion_Puerto.BAUD.nombre)));
-                list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumManager.Configuracion_Puerto.STOP.nombre)));
-                list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumManager.Configuracion_Puerto.DATA.nombre)));
-                list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumManager.Configuracion_Puerto.PARITY.nombre)));
+                list.add(Reflextion_Interface.getFieldValueStr(clase , String.valueOf(EnumReflexion.Configuracion_Puerto.BAUD.nombre)));
+                list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumReflexion.Configuracion_Puerto.STOP.nombre)));
+                list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumReflexion.Configuracion_Puerto.DATA.nombre)));
+                list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumReflexion.Configuracion_Puerto.PARITY.nombre)));
                 return list;
             } catch (Exception e) {
                 System.err.println("Error obteniendo configuraciones: " + e.getMessage());
@@ -89,7 +92,7 @@ public  class BalanzaService implements Serializable {
     }
 
     public enum ModelosClasesDispositivos {
-        Dispositivo(com.service.Devices.Dispositivos.Clases.Dispositivo.class), Master(MasterDispositivos.class),Slave(SlaveDispositivos.class);
+        ASCII(com.service.Devices.Dispositivos.Clases.Dispositivo.class), Master(MasterDispositivos.class),Slave(SlaveDispositivos.class);
         public Class<? extends com.service.Interfaz.Dispositivo> clase;
         ModelosClasesDispositivos(Class<? extends com.service.Interfaz.Dispositivo> clase) {
             this.clase = clase ;//.getDeclaredConstructor().newInstance();
@@ -97,7 +100,7 @@ public  class BalanzaService implements Serializable {
 
         public boolean compararInstancia(int ndevice) {
             try {
-                dispositivoBase Device = BalanzaService.getInstance().Dispositivos.getDispositivo(ndevice);
+                dispositivoBase Device = PHService.Instancia().Dispositivos.getDispositivo(ndevice);
                 if(Device==null)return false;
                 return clase.isInstance(Device);
             } catch (Exception e) {
@@ -108,15 +111,15 @@ public  class BalanzaService implements Serializable {
             return clase;
         }
        public Boolean getTiene485(){
-           return Reflextion_Interface.getFieldValueBool(clase , String.valueOf(EnumManager.Dispositivos.puede485.nombre));
+           return Reflextion_Interface.getFieldValueBool(clase , String.valueOf(EnumReflexion.Dispositivos.puede485.nombre));
        }
         public ArrayList<String> getConfiguraciones() {
             try {
                 ArrayList<String> list= new ArrayList<>();
-                list.add(Reflextion_Interface.getFieldValueStr(clase , String.valueOf(EnumManager.Configuracion_Puerto.BAUD.nombre)));
-                list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumManager.Configuracion_Puerto.STOP.nombre)));
-                list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumManager.Configuracion_Puerto.DATA.nombre)));
-                list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumManager.Configuracion_Puerto.PARITY.nombre)));
+                list.add(Reflextion_Interface.getFieldValueStr(clase , String.valueOf(EnumReflexion.Configuracion_Puerto.BAUD.nombre)));
+                list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumReflexion.Configuracion_Puerto.STOP.nombre)));
+                list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumReflexion.Configuracion_Puerto.DATA.nombre)));
+                list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumReflexion.Configuracion_Puerto.PARITY.nombre)));
                 return list;
             } catch (Exception e) {
                 System.err.println("Error obteniendo configuraciones: " + e.getMessage());
@@ -127,18 +130,18 @@ public  class BalanzaService implements Serializable {
     }
 
     public enum ModelosClasesBzas {
-            Optima(OPTIMA_I.class), Minima(MINIMA_I.class), R31p30(R31P30_I.class), ITW_410(ITW4102Bzas.class), Spider_3(SPIDER3.class), Andgf_3000(ANDGF3000.class), Zorra_232(zorra232.class),ITW_230_II(ITW230II.class),ITW_410_FRM(ITW410_FORM.class),OHAUS_PR_Serial(PrSeries.class),ITW_380_Caudal(ITW380.class);//, NuevaBza(OPTIMA_I.class);
+            Optima(OPTIMA_I.class), Minima(MINIMA_I.class), R31p30(R31P30_I.class), ITW_410(ITW4102Bzas.class), Spider_3(SPIDER3.class), Andgf_3000(ANDGF3000.class), Zorra_232(zorra232.class),ITW_230_II(ITW230II.class),ITW_410_FRM(ITW410_FORM.class),OHAUS_PR_Serial(PrSeries.class),ITW_380_Caudal(ITW380.class);//, NuevaBza(NuevaBalanza.class);
             public Class<? extends BalanzaBase> clase;
             ModelosClasesBzas( Class<? extends BalanzaBase> clase) {
                 this.clase = clase ;//.getDeclaredConstructor().newInstance();
             }
         public Boolean getTienePorDemanda(){
             System.out.println("Clase cargada: " + clase);
-            return Reflextion_Interface.getFieldValueBool(clase , String.valueOf(EnumManager.Balanzas.puede485.nombre));
+            return Reflextion_Interface.getFieldValueBool(clase , String.valueOf(EnumReflexion.Balanzas.puede485.nombre));
         }
         public boolean compararInstancia(int nbza) {
             try {
-                Balanza balanza = BalanzaService.getInstance().Balanzas.getBalanza(nbza);
+                Balanza balanza = PHService.Instancia().Balanzas.getBalanza(nbza);
                 return clase.isInstance((BalanzaBase)balanza);
             } catch (Exception e) {
                 return false;
@@ -149,7 +152,7 @@ public  class BalanzaService implements Serializable {
            }
            public int GetnumMultiBzas() {
                try {
-                   return Reflextion_Interface.getFieldValueInt(clase , String.valueOf(EnumManager.Balanzas.nBalanzas.nombre));
+                   return Reflextion_Interface.getFieldValueInt(clase , String.valueOf(EnumReflexion.Balanzas.nBalanzas.nombre));
                } catch (Exception e) {
                    System.err.println("Error obteniendo numeromultiplebalanza: " + e.getMessage());
                    return 1; // Devuelve una lista vacía en caso de error
@@ -158,7 +161,7 @@ public  class BalanzaService implements Serializable {
             //aaaaaaaaaaaaaaaaaaaaaaOOOOOOOOO
         public boolean getTieneCal() {
             try {
-                return  Reflextion_Interface.getFieldValueBool(clase , String.valueOf(EnumManager.Balanzas.TieneCal.nombre));
+                return  Reflextion_Interface.getFieldValueBool(clase , String.valueOf(EnumReflexion.Balanzas.TieneCal.nombre));
             } catch (Exception e) {
                 System.err.println("Error obteniendo TieneCal: " + e.getMessage());
                 return false;
@@ -167,10 +170,10 @@ public  class BalanzaService implements Serializable {
            public ArrayList<String> getConfiguraciones() {
                try {
                    ArrayList<String> list= new ArrayList<>();
-                           list.add(Reflextion_Interface.getFieldValueStr(clase , String.valueOf(EnumManager.Configuracion_Puerto.BAUD.nombre)));
-                           list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumManager.Configuracion_Puerto.STOP.nombre)));
-                           list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumManager.Configuracion_Puerto.DATA.nombre)));
-                           list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumManager.Configuracion_Puerto.PARITY.nombre)));
+                           list.add(Reflextion_Interface.getFieldValueStr(clase , String.valueOf(EnumReflexion.Configuracion_Puerto.BAUD.nombre)));
+                           list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumReflexion.Configuracion_Puerto.STOP.nombre)));
+                           list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumReflexion.Configuracion_Puerto.DATA.nombre)));
+                           list.add(Reflextion_Interface.getFieldValueStr(clase ,String.valueOf(EnumReflexion.Configuracion_Puerto.PARITY.nombre)));
                    return list;
                } catch (Exception e) {
                    System.err.println("Error obteniendo configuraciones: " + e.getMessage());
@@ -180,7 +183,7 @@ public  class BalanzaService implements Serializable {
     }
 
     private static ComService ComService ;
-    private static BalanzaService Service=null;
+    private static PHService Service=null;
     /**
      * Inicializa el servicio `BalanzaService` si aún no está inicializado.
      * Si el servicio ya está inicializado, retorna la instancia existente.
@@ -189,48 +192,15 @@ public  class BalanzaService implements Serializable {
      * @param fragmentChangeListener El listener para manejar cambios de fragmento en la actividad.
      * @return La instancia de `BalanzaService`.
      */
-    public static BalanzaService init(AppCompatActivity activity, OnFragmentChangeListener fragmentChangeListener){
+    public static PHService Iniciar(AppCompatActivity activity, OnFragmentChangeListener fragmentChangeListener){
         if(Service==null){
             if(isDeviceRooted()){
                 runAsRoot("su -c 'iptables -t nat -A PREROUTING -p tcp --dport 502 -j REDIRECT --to-port 1502'");
-           /* runAsRoot("su -c 'iptables -P INPUT ACCEPT'");
-            runAsRoot("su -c 'iptables -P OUTPUT ACCEPT'");
-            runAsRoot(" su -c 'chmod 777 /dev/socket'");
-            runAsRoot("su -c iptables-restore < /etc/iptables.rules");
-            runAsRoot("su -c 'iptables -D INPUT -j bw_INPUT'");
-            runAsRoot("su -c 'iptables -D OUTPUT -j bw_OUTPUT'");
-            runAsRoot("su -c 'iptables -X bw_INPUT'");
-            runAsRoot("su -c 'iptables -X bw_OUTPUT'");
-           runAsRoot(" su -c 'iptables -D INPUT -p tcp --dport 502 -j ACCEPT'");
-            runAsRoot("su -c 'iptables -D OUTPUT -p tcp --sport 502 -j ACCEPT'");
-            runAsRoot("su -c 'iptables -D INPUT -p tcp --dport 502 -j REJECT'");
-            runAsRoot("su -c 'iptables -D OUTPUT -p tcp --sport 502 -j REJECT'");
-            runAsRoot("su -c 'iptables -D INPUT -p tcp --dport 502 -j DROP'");
-            runAsRoot("su -c 'iptables -D OUTPUT -p tcp --sport 502 -j DROP'");
-            runAsRoot("su -c 'iptables -A INPUT -p tcp --dport 502 -j ACCEPT'");
-            runAsRoot("su -c 'iptables -A OUTPUT -p tcp --sport 502 -j ACCEPT'");
-            runAsRoot("su -c 'iptables-save > /etc/iptables.rules'");
-            runAsRoot("su -c 'stop netd && start netd'");
-            runAsRoot("su -c 'setenforce 0'");
-            runAsRoot("su -c 'sepolicy-inject -s init -t net_bind_service -c tcp_socket -p bind'");
-            NO USAR A MENOS QUE FALLE TODO DE TODO
-            runAsRoot("su -c 'cat /sys/fs/selinux/policy > /sdcard/sepolicy'\n")
-            runAsRoot("su -c 'mount -o remount,rw /system'");
-            runAsRoot("su -c 'cp /sdcard/sepolicy /system/etc/selinux/'");
-            runAsRoot("su -c 'reboot'");
-            runAsRoot("su -c ' iptables -D INPUT -p tcp --dport 502 -j DROP' ");
-            runAsRoot(" su -c 'iptables -D INPUT -p tcp --dport 502 -j REJECT' ");
-            runAsRoot("su -c 'iptables -A INPUT -p tcp --dport 502 -j ACCEPT'");
-            runAsRoot("su -c 'iptables -A OUTPUT -p tcp --sport 502 -j ACCEPT'");
-          //  runAsRoot("su -c 'iptables -t nat -A PREROUTING -p tcp --dport 502 -j REDIRECT --to-port 1502'");
-            runAsRoot("su -c 'app_process -Djava.security.manager /system/bin com/jws/jwsapi'");
-            runAsRoot("su -c 'app_process -Djava.security.manager /system/bin com/service/Comunicacion/Modbus/modbus4And/ip/tcp/TcpSlave'");*/
-
             }else{
-                Utils.Mensaje("Habilitar Acceso ROOT",R.layout.item_customtoasterror,activity);
+                Mensaje("Habilitar Acceso ROOT",R.layout.item_customtoasterror,activity);
             }
-            Service= new BalanzaService();
-            ComService = com.service.ComService.init(activity,fragmentChangeListener);
+            Service= new PHService();
+            ComService = com.service.utilsPackage.ComService.init(activity,fragmentChangeListener);
 
             Service.init(false);
         }
@@ -265,7 +235,7 @@ public  class BalanzaService implements Serializable {
      *
      * @return La instancia de `BalanzaService`.
      */
-    public static BalanzaService getInstance(){
+    public static PHService Instancia(){
         return Service;
     }
 
@@ -306,8 +276,8 @@ public  class BalanzaService implements Serializable {
     protected void init(Boolean reset) {
     CountDownLatch latch = new CountDownLatch(1);
         if(reset != null && reset){
-            Puertos.ModbusMRA =null;Puertos.ModbusMRB =null;Puertos.ModbusMRC =null;
-            Puertos.serialPortB=null;Puertos.serialPortA=null;Puertos.serialPortC=null;
+            Puertos.Reset();
+
             int i=1;
             for (BalanzaBase Balanza : balanzasInstancia.balanzas.values()) {
                 Balanza.stop(i);
@@ -316,13 +286,16 @@ public  class BalanzaService implements Serializable {
             balanzasInstancia.balanzas.clear();
             balanzasInstancia.balanzas= new HashMap<>();
             GestorRecursos.getinstance().reiniciar();
+            DispositivosInstancia.stop();
+            DispositivosInstancia=null;
+            Dispositivos=null;
         }
        //Utils.clearCache(ComService.activity.getApplicationContext());
         SettingsDef();
         ArrayList<classDevice> Devicelist = PreferencesDevicesManager.get_listPorTipo(PreferencesDevicesManager.obtenerIndiceTipo("Dispositivo"),ComService.activity);
+           System.out.println( "DEBUGGEO "+!Devicelist.isEmpty()+" "+ String.valueOf(Devicelist.get(0).getSeteo())+" "+ String.valueOf(DispositivosInstancia==null));
             if(!Devicelist.isEmpty() && Devicelist.get(0).getSeteo() && DispositivosInstancia==null){
                 try {
-                    DispositivosInstancia.stop();
                 } catch (Exception e) {
                 } finally {
                     DispositivosInstancia = new InternalDispositivos();
@@ -330,7 +303,6 @@ public  class BalanzaService implements Serializable {
                     Dispositivos = DispositivosInstancia;
                 }
             }
-
         balanzasInstancia = new Balanzas(); // Tipo concreto
         Balanzas = balanzasInstancia;
             ArrayList<classDevice> balanzasList = PreferencesDevicesManager.get_listPorTipo(PreferencesDevicesManager.obtenerIndiceTipo("Balanza"),ComService.activity);
@@ -358,7 +330,6 @@ public  class BalanzaService implements Serializable {
         //usbTeclado.readAsyncFromDevice();
     }
     private class Impresoras implements Printer {
-
         /**
          * Envía una etiqueta para imprimir a la impresora configurada en el índice proporcionado.
          *
@@ -439,7 +410,7 @@ public  class BalanzaService implements Serializable {
        }
 
        @Override
-        public  void init(ExpansionManager.ExpansionesMessageListener Listener) {
+        public  void Iniciar(ExpansionManager.ExpansionesListener Listener) {
             //System.out.println("Expansiones init");
             if(initializexpansionesbool) {
                 initializexpansionesbool = false;
@@ -507,7 +478,7 @@ public  class BalanzaService implements Serializable {
             };
         }
         public  void InitializateDevices(ArrayList<classDevice> Devicelist) {
-             CountDownLatch latch = new CountDownLatch(Devicelist.size()-1);
+             CountDownLatch latch = new CountDownLatch(Devicelist.size());
             System.out.println("size nDevice"+Devicelist.size());
 
             for (classDevice Device : Devicelist) {
@@ -572,15 +543,19 @@ public  class BalanzaService implements Serializable {
         @Override
         public void stop() {
             for (Map.Entry<Integer, dispositivoBase> entry : dispositivosMap.entrySet()) {
-                dispositivoBase valor = entry.getValue();
-                valor.stop();
+                try {
+                    dispositivoBase valor = entry.getValue();
+                    valor.stop();
+                } catch (Exception e) {
+
+                }
             }
         }
     }
     private class Escaneres implements com.service.Interfaz.EscanerGestor{
 
         @Override
-        public  void init(EscannerManager.ScannerMessageListener Listener) {
+        public  void init(EscannerManager.EscanerListener Listener) {
             // System.out.println("escanner init");
             if(initializeescannerbool) {
                 initializeescannerbool = false;
@@ -850,14 +825,6 @@ public  class BalanzaService implements Serializable {
             }
             return null;
 
-        }
-
-
-
-        public void stop(int numBza) {
-            for (int i = 0; i < balanzas.size(); i++) {
-                balanzas.get(i).stop(0);
-            }
         }
 
         public void openCalibracion(int numBza) {
